
syntax = "proto3";
package msg;
/* 客户端发送给服务器的所有协议及参数结构
以下注释格式为：备注 + subCmd + 参数数据结构
             进入房间 + 0 + C2SIntoGame
             用户发言 + 1 + C2SUserAction
             比牌    + 2 + C2SCompareCards
             离开房间 + 3 + C2SIntoGame
             重开比赛 + 4 + C2SIntoGame
             获取可比牌用户 + 5 + C2SIntoGame
             客户端发牌动画结束，通知服务器开始倒计时 + 6 + C2SIntoGame

*/
//进入游戏
message C2SIntoGame{    //subCmd 0
    int32 userId = 1;
    string userName = 2;    //暂时先随便传
}
//玩家发言
message C2SUserAction{  //subCmd 1
    int32 userId = 1;
    string option = 2;  //"give_up"：弃牌 raise:加注 see_cards:看牌  all_in:全押  follow:跟注  follow_all_the_way:跟到底  cancel_follow:取消跟到底
    int64 amount=3;
}
//比牌
message C2SCompareCards{
    int32 firstUserId = 1;//发起人
    int32 secondUserId = 2;//被比牌的人
}

